--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,6 +3,7 @@
 <% @portfolio_items.each do |portfolio_item| %>
 <p><%= portfolio_item.title %></p>
 <p><%= portfolio_item.subtitle %></p>
-<p><%= image_tag portfolio_item.main_image %></p>
+<p><%= portfolio_item.body %></p>
+<p><%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %></p>
 
 <%  end %>
