--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,15 @@
 <h1>Portfolio Items</h1>
 
+
+
+<%= link_to "Create New Item", new_portfolio_path %>
+
+
 <% @portfolio_items.each do |portfolio_item| %>
 <p><%= portfolio_item.title %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
-<p><%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %></p>
-
+<%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %>
+<%= link_to "Edit",edit_portfolio_path(portfolio_item.id)%>
 <%  end %>
+
