--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,10 +6,10 @@
 
 
 <% @portfolio_items.each do |portfolio_item| %>
-<p><%= portfolio_item.title %></p>
+<p><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %>
-<%= link_to "Edit",edit_portfolio_path(portfolio_item.id)%>
+<%= link_to "Edit",edit_portfolio_path(portfolio_item)%>
 <%  end %>
 
