--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,7 +6,7 @@
 
 
 <% @portfolio_items.each do |portfolio_item| %>
-<p><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></p>
+<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %>
