--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,7 +9,7 @@
 <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.main_image if !portfolio_item.main_image.nil? %>
+<%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
 <%= link_to "Edit",edit_portfolio_path(portfolio_item)%>
 
 #Will Send User to Destroy Action
