--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -17,6 +17,17 @@
     <%= form.label :body %>
     <%= form.text_area :body %>
   </div>
+
+  <ul > <!inherits from form_for and it gives ability to create nested forms -->
+
+      <%= form.fields_for :technologies do |technology_form|%> 
+    <li> 
+      <%= technology_form.label :name %>
+      <%= technology_form.text_field :name %>
+    </li>
+    <% end %>
+  </ul>
+
   <div class="actions">
     <%= form.submit %>
   </div>
