--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+    <% if current_user%>
+    <!changing route to Logout rather than sign out-->
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+    <% else%>
+     <%= link_to "Register", new_user_registration_path%>
+      <%= link_to "Login", new_user_session_path%>
+    <% end%>
     <%= yield %>
   </body>
 </html>
