--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,8 @@
       <%= link_to "Login", new_user_session_path%>
     <% end%>
     <%= yield %>
+    <% if session[:source]%>
+   <p>Thanks for visiting me from <%= session[:source] %></p> 
+    <% end %>
   </body>
 </html>
