--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsDemoPortfolio</title>
+    <title><%= @page_title%></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <!search engine optimization-->
+    <META name="keywords" content="<%=@seo_keywords%>" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -11,6 +14,14 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+    <div> <!application layout page allows us to only use this code on page but let the links appear on every page-->
+      <div><%= link_to "Home", root_path %></div>
+      <div><%= link_to "About", about_path %></div>
+      <div><%= link_to "Contact", contact_path %></div>
+       <div><%= link_to "Blogs", blogs_path %></div>
+        <div><%= link_to "Portfolio", portfolios_path %></div>
+    </div>
 
     <!showing user and login info-->
     <% if current_user.is_a?(User)%>
@@ -23,6 +34,7 @@
       <%= link_to "Login", new_user_session_path%>
     <% end%>
 
+    <! code from any other page or file will slide into the yield method, allowing it to appear alongside the code being used on the entire application, it dynamically slides in code-->
     <%= yield %>
 
     <% if session[:source]%>
