--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,13 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <div> <!application layout page allows us to only use this code on page but let the links appear on every page-->
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-       <div><%= link_to "Blogs", blogs_path %></div>
-        <div><%= link_to "Portfolio", portfolios_path %></div>
-    </div>
+    <%=render "shared/nav" %>
 
     <!showing user and login info-->
     <% if current_user.is_a?(User)%>
