--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -12,8 +12,8 @@
 <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
 <%= link_to "Edit",edit_portfolio_path(portfolio_item)%>
 
-#Will Send User to Destroy Action
-#having method: : delete will redirect path to the destroy Action, if it werent there it would direct to show method
+<!Will Send User to Destroy Action
+ having method: : delete will redirect path to the destroy Action, if it werent there it would direct to show method-->
 <%= link_to 'Destroy Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %> 
 <%  end %>
 
