--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,9 @@
+<!application layout page allows us to only use this code on page but let the links appear on every page-->
 
-
-<div> <!application layout page allows us to only use this code on page but let the links appear on every page-->
+<div class="<%=location%>">       
       <div><%= link_to "Home", root_path %></div>
       <div><%= link_to "About", about_path %></div>
       <div><%= link_to "Contact", contact_path %></div>
       <div><%= link_to "Blogs", blogs_path %></div>
       <div><%= link_to "Portfolio", portfolios_path %></div>
-    </div>
+</div>
