--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,19 +1,9 @@
 <h1>Portfolio Items</h1>
 
-
-
 <%= link_to "Create New Item", new_portfolio_path %>
 
-
-<% @portfolio_items.each do |portfolio_item| %>
-<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
-<%= link_to "Edit",edit_portfolio_path(portfolio_item)%>
-
-<!Will Send User to Destroy Action
- having method: : delete will redirect path to the destroy Action, if it werent there it would direct to show method-->
-<%= link_to 'Destroy Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %> 
-<%  end %>
+<! renders partial whilst identifying name of partial and collection-->
+<!collection is manually being entered to tell rails that this type of partial/render is of this collection type-->
+<% render partial: 'portfolio_item', collection: @portfolio_items %>
+<! manual configuartion of a partial-->
 
