Added Helper Methods from ActionView

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p>Contact me at <%= number_to_phone "4974937848" %></p>
+<p><%= number_to_currency "150.32" %></p>
+<p><%= number_to_percentage "78.43" %></p>
+<p> <%= number_with_delimiter "4974937848" %></p>
