--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,6 +4,6 @@
 
 <! renders partial whilst identifying name of partial and collection-->
 <!collection is manually being entered to tell rails that this type of partial/render is of this collection type-->
-<% render partial: 'portfolio_item', collection: @portfolio_items %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
 <! manual configuartion of a partial-->
 
