--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the Portfolios controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 body{
 	background-color: red ;
 	color:white;
@@ -10,3 +6,4 @@ body{
 .top a{
 	color:white;
 }
+// Custom bootstrap variables must be set or imported *before* bootstrap.
