added Petergate and added site_admin and different authentications

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,6 +4,7 @@ body{
 }
 
 .top a{
-	color:white;
+	color:blue;
 }
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
