--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 
 
 <% @angular_portfolio_items.each do |portfolio_item| %>
@@ -10,10 +10,10 @@
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>
-<%= link_to "Edit",edit_portfolio_path(portfolio_item)%>
+<%= link_to "Edit",edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %>
 
 #Will Send User to Destroy Action
 #having method: : delete will redirect path to the destroy Action, if it werent there it would direct to show method
-<%= link_to 'Destroy Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %> 
+<%= link_to 'Destroy Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %> 
 <%  end %>
 
