--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Portfolio Items</h1>
 
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin)  %>
 
 <! renders partial whilst identifying name of partial and collection-->
 <!collection is manually being entered to tell rails that this type of partial/render is of this collection type-->
