--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, schrink-to-fit=no">
+    
     <title><%= @page_title%></title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    
 
     <!search engine optimization-->
     <META name="keywords" content="<%=@seo_keywords%>" />
@@ -20,18 +20,17 @@
     <div class= "site-wrapper">
       <div class = "site-wrapper-inner">
         <div class = "cover-container">
-        
-          <%= render "shared/application_nav" %>
 
-          <%= login_helper%>
-              
+          <%= render "shared/application_nav"%>
+
           <! code from any other page or file will slide into the yield method, allowing it to appear alongside the code being used on the entire application, it dynamically slides in code-->
           <%= yield %>
 
-          <%= copyright_generator %>
+          <%= render "shared/application_footer" %>
 
           <% if session[:source]%>
-          p>Thanks for visiting me from <%= session[:source] %></p>     
+          <p>Thanks for visiting me from <%= session[:source] %></p>     
+
         </div>
       </div>
     </div>
