--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -3,27 +3,27 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-start mb-0">Big MaC</h3>
+                <h3 class="float-md-start mb-0">Big Mac</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <%= link_to "Home", root_path, class: "nav-link" %>
                     <%= link_to "About", about_path, class: "nav-link" %>
                     <%= link_to "Contact", contact_path, class: "nav-link" %>
                     <%= link_to "Blogs", blogs_path, class: "nav-link" %>
                     <%= link_to "Portfolio", portfolios_path, class: "nav-link" %>
+                    <%= login_helper "nav-link"  %>
                 </nav>
             </div>
         </header>
 
-        <main class="px-3">
-            <h1>Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <main class="px-3">
+            <h1 class= "cover-heading">Cover your page.</h1>
+            <p class="lead"> Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own. </p>
             <p class="lead">
-            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+            <%= link_to "About Me", about_path,  class: "btn btn-lg btn-light fw-bold border-white bg-white"%>
             </p>
         </main>
-
-        <footer class="mt-auto text-white-50">
-            <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-        </footer>
     </div>
 </body>
+
+
+                   
